tests/ui/type_state_invalid_partial.stderr
error[E0599]: no method named `generate_partial_signature` found for struct `SigningSession` in the current scope
  --> tests/ui/type_state_invalid_partial.rs:22:21
   |
22 |     let _ = session.generate_partial_signature(commitments, b"message");
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `SigningSession`
   |
   = note: the method was found for `SigningSession<AwaitingCommitments, B>`
